--- a/blog.html
+++ b/blog.html
@@ -38,13 +38,69 @@
       </div>
     </section>
 
-    <section id="page-header" class="blog-header">
+    <section id="page-header-1">
       <h2>#readmore</h2>
 
       <p>Read all case stuudies about our products!</p>
     </section>
 
-
+    <section id="blog">
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="images/blog/b1.jpg" alt="b1.jpg">
+            </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr 
+                wolf chartreuse hexagon irony, godard...</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+        </div>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="images/blog/b2.jpg" alt="b2.jpg">
+            </div>
+            <div class="blog-details">
+                <h4>How to Style a Quiff</h4>
+                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr 
+                wolf chartreuse hexagon irony, godard...</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+        </div>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="images/blog/b3.jpg" alt="b3.jpg">
+            </div>
+            <div class="blog-details">
+                <h4>Must-Have Skater Girl Items</h4>
+                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr 
+                wolf chartreuse hexagon irony, godard...</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+        </div>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="images/blog/b4.jpg" alt="b4.jpg">
+            </div>
+            <div class="blog-details">
+                <h4>Runway-Inspired Trends</h4>
+                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr 
+                wolf chartreuse hexagon irony, godard...</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+        </div>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="images/blog/b6.jpg" alt="b6.jpg">
+            </div>
+            <div class="blog-details">
+                <h4>AW20Menswear Trends</h4>
+                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr 
+                wolf chartreuse hexagon irony, godard...</p>
+                <a href="#">CONTINUE READING</a>
+            </div>
+        </div>
+    </section>
 
     <section id="pagination" class="section-p1">
       <a href="#">1</a>
